# FoxEmu_Archived

./: .travis.yml  CMakeLists.txt  README.md  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/macros/: CheckBuildDir.cmake  FindGit.cmake
dep/: CMakeLists.txt
dep/enet/: CMakeLists.txt  callbacks.cpp  callbacks.h  enet.h  enet_time.h  host.cpp  list.cpp  list.h  packet.cpp  peer.cpp  protocol.cpp  protocol.h  time.h  types.h  unix.cpp  unix.h  utility.h  win32.cpp  win32.h
dep/raf/: CMakeLists.txt  RAFManager.cpp  RAFManager.h
src/: CMakeLists.txt
src/battleserver/: CMakeLists.txt  Main.cpp  battleserver.conf.dist  battleserver.rc
src/game/: CMakeLists.txt
src/game/Chat/: Chat.cpp
src/game/Entities/Champion/: Champion.cpp
src/game/Entities/Fountain/: Fountain.cpp  Fountain.h
src/game/Entities/Minion/: Minion.cpp
src/game/Entities/Turret/: Turret.cpp
src/game/Entities/Unit/: Unit.cpp
src/game/Map/: Map.cpp
src/game/Network/: Opcodes.cpp  Opcodes.h
src/game/Spells/: Spells.cpp  Spells.h
src/genrev/: CMakeLists.txt
src/loginserver/: CMakeLists.txt  Main.cpp  loginserver.conf.dist  loginserver.rc
src/scripts/: CMakeLists.txt
src/shared/: CMakeLists.txt  Common.h  Stdafx.h
src/shared/Cryptography/: Base64.cpp  Base64.h  Blowfish.cpp  Blowfish.h
